@@ -1,3 +1,8 @@
+Wed Aug  6 13:48:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* main.c (main): Add comment about errors writing CVS/Root in
+	need_to_create_root code.
+
 Tue Aug  5 22:05:20 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* entries.c (write_entries): If trouble writing Entries.Backup,
